--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-alpha1",
     "core-js": "^3.6.5",
+    "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
@@ -18,6 +20,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "node-sass": "^4.12.0",
+    "raw-loader": "^4.0.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
