Added chart addition workflow

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-alpha1",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
