--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.0.0-alpha1",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
