--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
     "bootstrap": "^5.0.0-alpha1",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
-    "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.6",
+    "@vue/cli-plugin-pwa": "^4.5.6",
+    "@vue/cli-plugin-router": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
     "node-sass": "^4.12.0",
     "raw-loader": "^4.0.1",
     "sass-loader": "^8.0.2",
